--- a/vegetation/note/PlotLevel_descriptions.Rmd
+++ b/vegetation/note/PlotLevel_descriptions.Rmd
@@ -48,8 +48,8 @@ testData <- testData %>%
   mutate(Herb_Ht = replace(Herb_Ht, Herb_Ht == "999", NA)) %>%
   mutate(Gram_Ht = replace(Gram_Ht, Gram_Ht == "999", NA)) %>%
   mutate(Caples_Severity_Class = replace(Caples_Severity_Class, Caples_Severity_Class == "Unburned" & Caples_Perim == "Y", "Unburned_In")) %>%
-  mutate(Caples_Severity_Class = replace(Caples_Severity_Class, Caples_Severity_Class == "Unburned" & Caples_Perim == "N", "Unburned_Out"))
-
+  mutate(Caples_Severity_Class = replace(Caples_Severity_Class, Caples_Severity_Class == "Unburned" & Caples_Perim == "N", "Unburned_Out")) %>%
+  mutate(Caples_Severity_Class = factor(Caples_Severity_Class, levels = c("High","Mod","Low","Unburned_In","Unburned_Out"))) #fix to be a leveled factor
 ```
 
 There are two types of plots in this document - scatterplots and barcharts. The *scatterplots* depict the difference in the variable before and after the burn treatment. Each plot is represented by a point. The black line at zero represents no change in the variable between pre-treatment and post-treatment; points that fall above the line indicate a gain and points that fall below the line indicate a loss.
@@ -557,7 +557,7 @@ shrubCoverData <- testData %>%
   arrange(desc(Treatment_Interval)) %>% 
   summarise(diff = diff(value), Value_orig = value[1], Value_after = value[2])
   
-fct1<- levels(fct_reorder(as.factor(shrubCoverData$plotID_veg), shrubCoverData$Caples_Severity_Class))
+fct1<- levels(fct_reorder(as.factor(shrubCoverData$plotID_veg), as.numeric(shrubCoverData$Caples_Severity_Class)))
 fct2 <- levels(factor(shrubCoverData$ShrubCover, levels = c("Total_Tree_Cover","Live_Shrub_Tall_Cover","Live_Shrub_Medium_Cover", "Live_Shrub_Low_Cover","Herb_Cover","CWD_cover")))
 fct3 <- levels(factor(shrubCoverData$Caples_Severity_Class, levels = c("High","Mod","Low","Unburned_In","Unburned_Out")))
 facetLabels <- c(Total_Tree_Cover = "Tree Cover",
@@ -1366,7 +1366,7 @@ testData %>%
         Live_Shrub_Tall_Height,Live_Shrub_Medium_Height,Live_Shrub_Low_Height) %>%
   pivot_longer(-c(1:3), names_to = "Shrubs", values_to = "value") %>% 
   group_by(plotID_veg, Caples_Severity_Class, Shrubs) %>% 
-  arrange(desc(Treatment_Interval)) %>% 
+  arrange(desc(Treatment_Interval)) %>% View()
   summarise(diff = diff(value), Value_orig = value[1], Value_after = value[2])%>% group_by(Caples_Severity_Class, Shrubs) %>% summarise(mean(diff)) %>%
   ggplot() +
   geom_bar(aes(x = Shrubs, y = `mean(diff)`), stat = 'identity', fill = "lightgrey", color = "darkgrey") +
